Add "Made with ❤️ by Karol John"

--- a/templates/index.html
+++ b/templates/index.html
@@ -294,7 +294,7 @@
                 </div>
             </form>
             <div class="footer">
-                <p>@ MHYRENZ PHARMACY, APP BY KAROL JOHN - SOCKETS</p>
+                <p>Made with ❤️ by Karol John</p>
             </div>
         </div>
     </section>
